--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -12,6 +12,17 @@
     z-index: 1;
 }
 
+.product:hover {
+    
+    box-shadow:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+}
+
 .product >img {
     max-height: 200px;
     width: 100%;
@@ -25,6 +36,7 @@
     color: #111; 
     border: 1px solid;
     margin-top: 10px;
+    cursor: pointer;
 }
 
 .product__price {
